--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-dist: xenial
 language: python
-python: 3.7
+install: pip install pipenv
 script: make test
+matrix:
+  include:
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
